--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "fotopic",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
+  "types": "./build/index.d.ts",
+  "type": "commonjs",
   "scripts": {
     "test": "mocha",
     "build": "rimraf ./build && tsc",
@@ -13,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.11.1",
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
@@ -20,5 +24,13 @@
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.0",
+    "typeorm": "^0.2.26"
   }
 }
