--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,27 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "lib": [ 
+      "es5", 
+      "es6", 
+      "es7",
+      "es2015", 
+      "es2016",
+      "es2017", 
+      "es2018",
+      "esnext" 
+    ],
+    "target": "es2017",
     "module": "commonjs",
-    "lib": ["es6"],
+    "moduleResolution": "node",
     "allowJs": true,
     "outDir": "build",
     "rootDir": "src",
-    "strict": true,
+    "declaration": true,
+    "declarationMap": true,
+    "inlineSources": true,
+    "inlineSourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
