--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
