--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.11.1",
+    "@types/nodemailer": "^6.4.0",
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
@@ -29,7 +31,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.26"
