--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^14.11.1",
     "@types/nodemailer": "^6.4.0",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
