--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.7",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
