public folder out of src

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -27,5 +27,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+
+  "exclude": ["public"]
 }
