--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.11.1",
     "@types/nodemailer": "^6.4.0",
+    "@types/puppeteer": "^3.0.2",
     "chai-http": "^4.3.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
@@ -36,6 +37,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
+    "puppeteer": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "typeorm": "^0.2.26"
